--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -266,8 +266,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: block;
 }
 .banner p {
-  color: #B8B8B8;
-  font-size: 18px;
+  color: #232323;
+  font-size: 24px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   width: 96%;
