--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -32,7 +32,7 @@ body {
   overflow-x: hidden;
   position: relative;
   background-color: #121212 !important;
-  color: #fff !important;
+  color: #ddd !important;
   font-family: 'Centra', sans-serif !important;
 }
 
@@ -299,11 +299,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Skills Css ************/
 .skill {
-  padding: 0 0 50px 0;
+  padding-top: 50px;
   position: relative;
+  background-color: #000;
+
 }
 .skill-bx {
-  background: #585858;
   border-radius: 64px;
   text-align: center;
   padding: 60px 50px;
@@ -312,10 +313,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .skill h2 {
 	font-size: 45px;
 	font-weight: 700;
+  padding-bottom: 30px;
 }
 .skill p {
     color: #151515;
-    font-size: 18px;
+    font-size: 12px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
     margin: 14px 0 75px 0;
@@ -326,7 +328,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-slider .item img {
-  width: 50%;
+  width: 40%;
   margin: 0 auto 15px auto;
 }
 .background-image-left {
@@ -338,6 +340,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .item{
 display: inline-block;
+}
+
+.owl-carousel .item img {
+  filter: invert(0.9);
 }
 
 /************ Projects Css ************/
