--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -76,7 +76,9 @@ p.danger {
 	color: red;
 }
 
-
+.headerimg img{
+  width: 50%;
+}
 
 /************ Navbar Css ************/
 nav.navbar {
@@ -344,6 +346,11 @@ display: inline-block;
   display: flex;
   justify-content: center; /* Centra horizontalmente */
   align-items: center; /* Centra verticalmente */
+}
+
+.character img{
+  border-radius: 50%;
+  width: 80%;
 }
 
 /************ Projects Css ************/
