--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -15,6 +15,20 @@
 	font-weight: 400;
 }
 
+/************ Colors ************/
+
+:root {
+  --first-color: #e6e6e6;
+  --second-color: #9d3172;
+  --third-color: #d3a61d;
+  --fourth-color: #176589;
+  --fifth-color: #999;
+  --sixth-color: #010101;
+  --seventh-color: #d9d9d91a;
+  --eighth-color: #ffffff80;
+  --nineth-color: #444;
+}
+
 /************ Default Css ************/
 * {
   margin: 0;
@@ -31,8 +45,8 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #121212 !important;
-  color: #ddd !important;
+  background-color: var(--sixth-color) !important;
+  color: var(--first-color) !important;
   font-family: 'Centra', sans-serif !important;
 }
 
@@ -66,18 +80,20 @@ input:focus, textarea:focus, select:focus {
 		max-width: 100%;
 		padding: 0 150px;
 	}
+  .proj-txtx span{
+    font-size: 12px;
+  }
 }
 
-p.success {
-	color: green;
-}
-
-p.danger {
-	color: red;
+@media (max-width:820px) {
+	.container {
+		margin-top: 60px;
+	}
 }
 
 .headerimg img{
   width: 50%;
+  filter: invert(0.9);
 }
 
 /************ Navbar Css ************/
@@ -88,17 +104,18 @@ nav.navbar {
   top: 0;
   z-index: 9999;
   transition:  0.32s ease-in-out;
+  border-bottom: 2px solid var(--nineth-color); 
 }
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: #121212;
+  background-color: var(--sixth-color);
 }
 nav.navbar a.navbar-brand {
     width: 9%;
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
-  color: #ddd !important;
+  color: var(--first-color) !important;
   letter-spacing: 0.8px;
   padding: 0 25px;
   font-size: 18px;
@@ -119,21 +136,21 @@ span.navbar-text {
 .social-icon a {
     width: 42px;
     height: 42px;
-    background: rgba(217, 217, 217, 0.1);
+    background: var(--seventh-color);
     display: inline-flex;
     border-radius: 50%;
     margin-right: 6px;
     align-items: center;
     justify-content: center;
     line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid var(--eighth-color);
 }
 .social-icon a::before {
     content: "";
     width: 42px;
     height: 42px;
     position: absolute;
-    background-color: #ddd;
+    background-color: var(--first-color);
     border-radius: 50%;
     transform: scale(0);
 	transition: 0.3s ease-in-out;
@@ -151,13 +168,13 @@ span.navbar-text {
 }
 .navbar-text button {
   font-weight: 700;
-  color: #ddd;
-  border: 1px solid #ddd;
+  color: var(--first-color);
+  border: 1px solid var(--first-color);
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
 	position: relative;
-	background-color: transparent;
+	background-color: transparent var(--second-color);
 	transition: 0.3s ease-in-out;
 }
 .navbar-text button span {
@@ -168,14 +185,14 @@ span.navbar-text {
   width: 0%;
   height: 100%;
   position: absolute;
-  background-color: #ddd;
+  background-color: var(--first-color);
   left: 0;
   top: 0;
   z-index: -1;
   transition: 0.3s ease-in-out;
 }
 .navbar-text button:hover {
-  color: #121212;
+  color: var(--sixth-color);
 }
 .navbar-text button:hover::before {
 	content: "";
@@ -193,19 +210,19 @@ nav.navbar .navbar-toggler-icon {
   height: 17px;
   background-image: none;
   position: relative;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid var(--first-color);
   transition: all 300ms linear;
   top: -2px;
 }
 nav.navbar .navbar-toggler-icon:focus {
-	border-bottom: 2px solid #ddd;
+	border-bottom: 2px solid var(--first-color);
 }
 nav.navbar .navbar-toggler-icon:after,
 nav.navbar .navbar-toggler-icon:before {
 	width: 24px;
 	position: absolute;
 	height: 2px;
-	background-color: #ddd;
+	background-color: var(--first-color);
 	top: 0;
 	left: 0;
 	content: '';
@@ -217,54 +234,61 @@ nav.navbar .navbar-toggler-icon:after {
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
 	transform: rotate(45deg);
-	background-color: #ddd;
+	background-color: var(--first-color);
 	height: 2px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 	transform: translateY(8px) rotate(-45deg);
-	background-color: #ddd;
+	background-color: var(--first-color);
 	height: 2px;
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-	border-color: transparent;
+	border-color: transparent var(--seventh-color);
 }
 
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
   padding: 150px 0 100px 0;
-  background-image: url('./assets/img/banner-bg.png');
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  height: 100vh;
+  background-color: var(--sixth-color);
 }
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
-  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: var(--second-color);
+  border: 1px solid var(--eighth-color);
   font-size: 20px;
   margin-bottom: 16px;
   display: inline-block;
 }
 .banner h1 {
-  font-size: 65px;
+  font-size: 55px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
   margin-bottom: 20px;
   display: block;
 }
+
+.banner h3{
+  color:var(--third-color);
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1;
+}
 .banner p {
-  color: #232323;
+  color: var(--nineth-color);
   font-size: 24px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   width: 96%;
+  padding: 5px;
+  background-color: var(--third-color);
 }
 .banner button {
-  color: #ddd;
+  color: var(--first-color);
   font-weight: 700;
   font-size: 20px;
   margin-top: 60px;
@@ -296,14 +320,26 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     }
 }
 .txt-rotate > .wrap {
-  border-right: 0.08em solid #666;
+  border-right: 0.08em solid var(--nineth-color);
+}
+
+.presentation{
+  margin-top: 40px;
+}
+
+.presentation > * {
+  padding: 50px 0;
+}
+
+.contactme{
+  text-decoration: none;
 }
 
 /************ Skills Css ************/
 .skill {
   padding-top: 40px;
   position: relative;
-  background-color: #000;
+  background-color: var(--sixth-color);
 
 }
 .skill-bx {
@@ -318,7 +354,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
 }
 .skill p {
-    color: #ddd;
+    color: var(--first-color);
     font-size: 18px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
@@ -342,22 +378,11 @@ display: inline-block;
   filter: invert(0.9);
 }
 
-.character{
-  display: flex;
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
-}
-
-.character img{
-  border-radius: 50%;
-  width: 80%;
-}
-
 /************ Projects Css ************/
 .project {
   padding: 40px 0;
   position: relative;
-  background-color: black;
+  background-color: var(--sixth-color);
 }
 .project h2 {
 	font-size: 45px;
@@ -365,26 +390,23 @@ display: inline-block;
   text-align: center;
 }
 .project p {
-  color: #B8B8B8;
+  color: var(--fifth-color);
   font-size: 18px;
   margin: 14px auto 30px auto;
   text-align: center;
 }
-.project .nav.nav-pills {
+.project .nav.nav-tabs {
   width: 70%;
   margin: 0 auto;
   border-radius: 40px;
   overflow: hidden;
 }
-.project .nav.nav-pills .nav-item {
+.project .nav.nav-tabs .nav-item {
   width: 33.3333%;
 }
-.project .nav.nav-pills .nav-link {
-  background-color: transparent;
-  border-radius: 0;
+.project .nav.nav-tabs .nav-link {
   padding: 17px 0;
-  color: #fff;
-  width: 80%;
+  color: var(--nineth-color);
   font-size: 17px;
   letter-spacing: 0.8px;
   font-weight: 500;
@@ -393,33 +415,33 @@ display: inline-block;
   text-align: center;
   z-index: 0;
 }
-.project .nav.nav-pills .nav-link::before {
+.project .nav.nav-tabs .nav-link::before {
     content: "";
     position: absolute;
     width: 0;
     height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    background-color: var(--third-color);
     top: 0;
     left: 0;
     z-index: -1;
     transition: 0.3s ease-in-out;
 }
-.project .nav.nav-pills .nav-link.active::before {
+.project .nav.nav-tabs .nav-link.active::before {
     width: 100% !important;
 }
-.project .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+.project .nav.nav-tabs .nav-link.active {
+    border: 1px solid var(--first-color);
 }
 .nav-link#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid var(--eighth-color);
   border-radius: 55px 0px 0px 55px;
 }
 .nav-link#projects-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid var(--eighth-color);
+  border-bottom: 1px solid var(--eighth-color);
 }
 .nav-link#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid var(--eighth-color);
   border-radius: 0 55px 55px 0;
 }
 .proj-imgbx {
@@ -430,7 +452,7 @@ display: inline-block;
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #4e1861 -5.91%, #4A2FBD 111.58%);
+  background-color: var(--second-color);
   opacity: 0.90;
   position: absolute;
   width: 100%;
@@ -477,18 +499,14 @@ display: inline-block;
 
 .cardImg{
   border-radius: 40px;
-  background: #eee;
-}
-
-row{
-  margin: 20px;
+  background: var(--first-color);
 }
 
 /************ Experience Css ************/
 .experience {
   padding: 40px 0;
   position: relative;
-  background-color: black;
+  background-color: var(--sixth-color);
 }
 .experience h2 {
 	font-size: 45px;
@@ -496,7 +514,7 @@ row{
   text-align: center;
 }
 .experience p {
-  color: #B8B8B8;
+  color: var(--fifth-color);
   font-size: 18px;
   margin: 14px auto 30px auto;
   text-align: center;
@@ -519,47 +537,47 @@ margin: 20px;
 
 /************ Contact ************/
 .contact {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 200px 0;
+  background-color: var(--fourth-color);
+  padding: 30px 0 100px 0;
 }
 .contact img {
-  width: 92%;
+  width: 80%;
 }
 .contact h2 {
 	font-size: 45px;
 	font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .contact form input, .contact form textarea {
   width: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: var(--sixth-color);
+  border: 1px solid var(--eighth-color);
   border-radius: 20px;
-  color: #fff;
+  color: var(--first-color);
   margin: 0 0 8px 0;
-  padding: 18px 26px;
+  padding: 15px 20px;
   font-weight: 500;
   font-size: 18px;
   letter-spacing: 0.8px;
   transition: 0.3s ease-in-out;
 }
 .contact form input:focus, .contact form textarea:focus {
-  background: rgba(255, 255, 255, 1);
-  color: #121212;
+  background: var(--first-color);
+  color: var(--sixth-color);
 }
 .contact form input::placeholder, .contact form textarea::placeholder {
   font-size: 16px;
   font-weight: 400;
-  color: #fff;
+  color: var(--first-color);
 }
 .contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
-  color: #121212;
+  color: var(--sixth-color);
   opacity: 0.8;
 }
 .contact form button {
   font-weight: 700;
-  color: #000;
-  background-color: #fff;
+  color: var(--sixth-color);
+  background-color: var(--first-color);
   padding: 14px 48px;
   font-size: 18px;
   margin-top: 25px;
@@ -572,11 +590,11 @@ margin: 20px;
   position: relative;
 }
 .contact form button:hover {
-  color: #fff;
+  color: var(--first-color);
 }
 .contact form button::before {
   content: "";
-  background: #121212;
+  background: var(--sixth-color);
   width: 0;
   height: 100%;
   position: absolute;
@@ -592,13 +610,10 @@ margin: 20px;
 /************ Footer Css ************/
 .footer {
   padding: 0 0 50px 0;
-  background-image: url('./assets/img/footer-bg.png');
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
+ background-color: var(--sixth-color);
 }
 .new-email-bx {
-  background: #fff;
+  background: var(--first-color);
   padding: 5px;
   border-radius: 20px;
   position: relative;
@@ -608,7 +623,7 @@ margin: 20px;
 }
 .new-email-bx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, var(--second-color) -5.91%, var(--third-color) 111.58%);
   border-radius: 20px;
   position: absolute;
   z-index: -1;
@@ -623,7 +638,7 @@ margin: 20px;
 .footer p {
   font-weight: 400;
   font-size: 14px;
-  color: #B8B8B8;
+  color: var(--fifth-color);
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
