--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -27,6 +27,7 @@
   --seventh-color: #d9d9d91a;
   --eighth-color: #ffffff80;
   --nineth-color: #444;
+  --tenth-color: #4c1837;
 }
 
 /************ Default Css ************/
@@ -483,7 +484,7 @@ display: inline-block;
 .proj-imgbx::before {
   content: "";
   background-color: var(--second-color);
-  opacity: 0.90;
+  opacity: 0.95;
   position: absolute;
   width: 100%;
   height: 0;
@@ -528,12 +529,14 @@ display: inline-block;
 }
 
 .cardImg{
-  border-radius: 40px;
+  border-radius: 20px;
   background: var(--first-color);
 }
 
 .cardproject{
   max-width: 300px;
+  padding: 25px;
+
 }
 
 /************ Experience Css  Education Css************/
@@ -561,13 +564,11 @@ display: inline-block;
   justify-content: center;
 }
 
-.experienceCard .cardImg, .educationCard .cardImg {
-max-width: 400px;
-}
+/*.experienceCard .cardImg, .educationCard .cardImg {
+max-width: 300px;
+}*/
 
-.experienceCard .proj-imgbx, .educationCard .proj-imgbox {
-margin: 20px;
-  }
+
 
 
 /************ Contact ************/
