--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -573,8 +573,9 @@ max-width: 300px;
 
 /************ Contact ************/
 .contact {
-  background-color: var(--fourth-color);
   padding: 30px 0 100px 0;
+  background-image: url("./assets/img/redes2.jpg");
+  background-size: 100%;
 }
 .contact img {
   width: 80%;
